# agcli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  robots.txt
.github/workflows/: ci.yml
docs/: llm.txt
docs/commands/: batch.md  drand.md  multisig.md  preimage.md  proxy.md  scheduler.md  subnet.md  weights.md
docs/tutorials/: agent-automation.md  getting-started.md  staking-guide.md  subnet-builder.md
src/: admin.rs  config.rs  error.rs  lib.rs  live.rs  localnet.rs  main.rs  scaffold.rs
src/chain/: connection.rs  extrinsics.rs  mod.rs  queries.rs  storage.rs
src/cli/: admin_cmds.rs  block_cmds.rs  commands.rs  helpers.rs  localnet_cmds.rs  mod.rs  network_cmds.rs  stake_cmds.rs  subnet_cmds.rs  system_cmds.rs  view_cmds.rs  wallet_cmds.rs  weights_cmds.rs
src/extrinsics/: identity.rs  mod.rs  registration.rs  staking.rs  subnet.rs  swap.rs  transfer.rs  weights.rs
src/queries/: metagraph.rs  mod.rs  portfolio.rs  query_cache.rs  subnet.rs
src/types/: balance.rs  chain_data.rs  mod.rs  network.rs
src/utils/: explain.rs  format.rs  mod.rs  pow.rs
src/wallet/: keyfile.rs  keypair.rs  mod.rs
tests/: chain_integration_test.rs  chain_test.rs  cli_test.rs  e2e_test.rs  helpers_test.rs  localnet_e2e_test.rs  proptest_fuzz.proptest-regressions  proptest_fuzz.rs  stress_test.rs  wallet_test.rs
